appId: com.deha.mobile
---
- launchApp
- assertVisible: "Primitives"
- scrollUntilVisible:
    element: "TABS"
    direction: DOWN
- assertVisible: "TABS"
- tapOn: "Password"
- assertVisible: "Change your password here."
- tapOn: "Settings"
- assertVisible: "Tweak your preferences."
- tapOn: "Account"
- assertVisible: "Manage your account details."
