appId: com.deha.mobile
---
- launchApp:
    arguments:
      reducedMotion: "true"
- assertVisible: "Primitives"
- scrollUntilVisible:
    element: "TOAST"
    direction: DOWN
- assertVisible: "TOAST"
- tapOn: "Default"
- assertVisible: "Default toast"
- tapOn: "Success"
- assertVisible: "Saved!"
- tapOn: "Error"
- assertVisible: "Error"
